# document-xml-mcp

./: .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: OLLAMA_DOCKER.md  glossary.md  n8n-setup.md
docs/adr/: ADR-001-use-pathlib-for-all-path-handling.md  ADR-002-mcp-prompt-ownership.md  ADR-003-mcp-resource-vs-prompt.md  ADR-004-tool-side-effects-and-server-boundary.md  ADR-005-cv-intelligence-server-boundary.md  ADR-006-flat-extended-fields-in-cvrecord.md  ADR-007-entra-id-as-cv-identity.md  ADR-008-human-gated-taxonomy-growth.md
examples/: README.md  client_sse.py  client_stdio.py
n8n/workflows/: parse-document.json
src/xml_processing_mcp/: __init__.py  config.py  models.py  server.py
src/xml_processing_mcp/document_tree/: __init__.py  builder.py  nodes.py
src/xml_processing_mcp/parsers/: __init__.py  base.py  docx_parser.py
src/xml_processing_mcp/prompts/: __init__.py  cv_analysis.py  cv_generation.py
src/xml_processing_mcp/renderers/: __init__.py  base.py  simple_xml_renderer.py
src/xml_processing_mcp/resources/: __init__.py  cv_resources.py
src/xml_processing_mcp/resources/templates/: assignment_format.md  cv_export_schema.xml
src/xml_processing_mcp/security/: __init__.py  file_limits.py  zip_safety.py
src/xml_processing_mcp/services/: cv_field_extractor.py  document_processing_service.py
src/xml_processing_mcp/sinks/: __init__.py  base.py  file_sink.py  return_sink.py
src/xml_processing_mcp/sources/: __init__.py  base.py  bytes_source.py  file_source.py
tests/: test_config.py  test_cv_field_extractor.py  test_document_processing_service.py  test_document_tree.py  test_docx_parser.py  test_integration_stdio.py  test_mcp_tools.py  test_models.py  test_parser_edge_cases.py  test_prompts.py  test_real_docx.py  test_resources.py  test_security.py  test_server.py  test_service_edge_cases.py  test_simple_xml_renderer.py  test_sinks.py  test_sources.py
